syntax = "proto3";

package order;

option go_package = "proto/order;order";

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (OrderResponse);
  rpc GetOrderById (GetOrderByIdRequest) returns (OrderResponse);
  rpc ListOrders (ListOrdersRequest) returns (ListOrdersResponse);
}

message Order {
  int32 id = 1;
  string customer_id = 2;
  string status = 3;
  double total = 4;
  string created_at = 5;
}

message CreateOrderRequest {
  string customer_id = 1;
  repeated OrderItem items = 2;
  string payment_method = 3;
  double total_price = 4;
}

message OrderItem {
  string product_id = 1;
  int32 quantity = 2;
}

message OrderResponse {
  Order order = 1;
}

message GetOrderByIdRequest {
  int32 id = 1;
}

message ListOrdersRequest {
  int32 page_index = 1;
  int32 page_size = 2;
}

message ListOrdersResponse {
  repeated Order orders = 1;
  int32 total_count = 2;
}
